# mfs

./: CMakeLists.txt  Makefile  Makefile_make  README.md  mfs_client.c  mfs_client_stub.c  mfs_client_stub.h  mfs_client_stub_1.c  mfs_comm.c  mfs_comm.h  mfs_directories.c  mfs_directories.h  mfs_files.c  mfs_files.h  mfs_lib.c  mfs_lib.h  mfs_msg.h  mfs_params.c  mfs_params.h  mfs_protocol.c  mfs_protocol.h  mfs_server.c  mfs_server.port  mfs_server_stub.c  mfs_server_stub.h  mfs_workers.c  mfs_workers.h  run.sh
alt/: mfs_client_stub_2.c  mfs_server_stub_1.c  mfs_server_stub_2.c  mfs_server_stub_3.c
include/: base_alloc.h  base_lib.h  base_socket.h  base_string.h  base_time.h  base_url.h  client_stub_local.h  client_stub_mpi.h  client_stub_socket.h  info_fsconf.h  info_ns.h  info_ns_common.h  info_ns_dbm.h  info_ns_file.h  info_ns_mfs.h  info_ns_tdb.h  info_params.h  mfs_api.h  mfs_client_api.h  mfs_client_stub.h  mfs_comm.h  mfs_comm_common.h  mfs_comm_mpi.h  mfs_comm_socket.h  mfs_conf.h  mfs_dbm.h  mfs_dbm_gdbm.h  mfs_dbm_ndbm.h  mfs_dbm_redis.h  mfs_dbm_tdb.h  mfs_descriptors.h  mfs_directories.h  mfs_directories_posix.h  mfs_directories_red.h  mfs_directories_redis.h  mfs_directory.h  mfs_directory_posix.h  mfs_file.h  mfs_file_mpi.h  mfs_file_posix.h  (+26 more)
src/: .mfs_server.c.swp  base_alloc.c  base_lib.c  base_socket.c  base_string.c  base_time.c  base_url.c  client_stub_local.c  client_stub_mpi.c  client_stub_socket.c  info_fsconf.c  info_ns.c  info_ns_dbm.c  info_ns_file.c  info_ns_mfs.c  info_ns_tdb.c  info_params.c  mfs_api.c  mfs_client_api.c  mfs_client_stub.c  mfs_comm.c  mfs_comm_mpi.c  mfs_comm_socket.c  mfs_conf.c  mfs_dbm.c  mfs_dbm_gdbm.c  mfs_dbm_ndbm.c  mfs_dbm_redis.c  mfs_dbm_tdb.c  mfs_descriptors.c  mfs_directories.c  mfs_directories_posix.c  mfs_directories_red.c  mfs_directories_redis.c  mfs_directory_posix.c  mfs_file_mpi.c  mfs_file_posix.c  mfs_files.c  mfs_files_mpi.c  mfs_files_posix.c  (+23 more)
staging/: stk_fd.c  stk_fda.c  stk_fda.h  stk_fs.c  stk_fs.h  stk_low_posix.c  stk_low_posix.h  stk_low_xpn.c  stk_low_xpn.h  stk_mid_ft.c  stk_mid_ft.h  stk_mid_ft_fmeta.c  stk_mid_ft_fmeta.h  stk_mid_log.c  stk_mid_log.h  stk_mid_null.c  stk_mid_null.h  util_log_api.c  util_log_api.h  xpn_log_api.c  xpn_log_api.h  xpn_sb_posix.c  xpn_sb_posix.h  xpn_sb_xpn.c  xpn_sb_xpn.h  xpn_si_ft.c  xpn_si_ft.h  xpn_si_log.c  xpn_si_log.h  xpn_si_null.c  xpn_si_null.h
staging/common/: xpni_dir.c  xpni_file.c  xpni_lowfsi.h
staging/include/: client_stub_local.h  client_stub_mpi.h  client_stub_socket.h  info_fsconf.h  info_ns.h  info_ns_common.h  mfs_api.h  mfs_comm.h  mfs_descriptors.h  server_stub_socket.h
staging/more/: stk_fd.c  stk_mid_ft.c  stk_mid_ft.h
staging/more/common/: xpni_fit.c  xpni_fmeta.c
staging/src/: client_stub_local.c  client_stub_socket.c  info_ns.c  mfs_api.c  mfs_descriptors.c  server_mpi.c  server_socket.c  server_stub_socket.c
staging/test/: Makefile_make  run_benchmark.sh  test_benchmark.c
staging_in/: stk_fd.h  stk_fs.c  stk_fs.h  stk_low_posix.c  stk_low_posix.h  stk_low_xpn.c  stk_low_xpn.h  stk_mid_log.c  stk_mid_null.c  util_log_api.c  util_log_api.h
staging_in/common/: xpni_fsit.c
staging_out/include/: client_stub_local.h  client_stub_mpi.h  client_stub_socket.h  info_ns_common.h  info_params.h  mfs_comm.h  mfs_comm_mpi.h  mfs_comm_socket.h  mfs_dbm.h  mfs_dbm_gdbm.h  mfs_dbm_redis.h  mfs_dbm_tdb.h  mfs_descriptors.h  mfs_directories.h  mfs_workers.h  mfs_workers_common.h  mfs_workers_onrequest.h  mfs_workers_pool.h  server_stub_mpi.h  server_stub_socket.h  stub_msg.h
staging_out/src/: client_stub_mpi.c  client_stub_socket.c  info_fsconf.c  info_params.c  mfs_api.c  mfs_comm.c  mfs_comm_mpi.c  mfs_comm_socket.c  mfs_dbm.c  mfs_dbm_gdbm.c  mfs_dbm_redis.c  mfs_dbm_tdb.c  mfs_directories.c  mfs_workers.c  mfs_workers_onrequest.c  mfs_workers_pool.c  server_mpi.c  server_socket.c  server_stub_mpi.c
staging_out/test/: test_benchmark.c  test_simple.c
test/: Makefile_make  conf-mpi.yaml  conf-socket.yaml  conf.1.yaml  conf.yaml  run.sh  run_benchmark.sh  run_simple.sh  test_benchmark.c  test_simple.c
tmp/: CMakeLists.txt
